# auralis

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
benches/: latency.rs  memory.rs
docs/: installation_guide.md  installation_guide_vi.md  installation_guide_win.md  installation_guide_win_vi.md  setup.md
docs/plans/: 2026-04-07-model-download-design.md  2026-04-08-dual-mode-architecture.md  2026-04-09-macos-native-tts.md  2026-04-10-cross-platform-tts-design.md  2026-04-10-cross-platform-tts-implementation.md  2026-04-13-meeting-summary-design.md  2026-04-13-meeting-summary-impl-plan.md
docs/plans/completed/: 2026-04-08-chunking-vad-design.md  2026-04-08-chunking-vad-implementation.md
python/: requirements.txt  translator.py
scripts/: local_pipeline.py  summary.py  whisper_confidence.py
src/: App.svelte  app.css  lib.rs  main.rs  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commands_audio.rs  commands_edge_tts.rs  commands_elevenlabs_tts.rs  commands_google_tts.rs  commands_pipeline.rs  commands_settings.rs  commands_transcripts.rs  commands_tts.rs  constants.rs  lib.rs  main.rs  model_downloader.rs  state.rs
src-tauri/src/audio/: mod.rs  system_audio.rs  system_audio_stub.rs
src-tauri/src/edge_tts/: communicate.rs  drm.rs  mod.rs  voices.rs
src-tauri/src/elevenlabs_tts/: synthesize.rs  voices.rs
src-tauri/src/google_tts/: mod.rs  synthesize.rs  voices.rs
src/application/: events.rs  mod.rs  orchestrator.rs
src/components/: AutoDetectIndicator.svelte  Button.svelte  ConfidenceSettings.svelte  ControlBar.svelte  ConversationBubble.svelte  DualPanel.svelte  ExportActions.svelte  FirstRunOnboarding.svelte  KeyboardShortcuts.svelte  LanguageSelectorWithAutoDetect.svelte  Modal.svelte  ModelDownloader.svelte  QuickConfidenceFilter.svelte  QuickLanguageSelector.svelte  QuickModeSelector.svelte  QuickTtsSelector.svelte  SavedTranscripts.svelte  SettingsView.svelte  StatusIndicator.svelte  TabNavigation.svelte  Tooltip.svelte  Transcript.svelte
src/domain/: errors.rs  mod.rs  models.rs  traits.rs
src/infrastructure/: container.rs  logging.rs  mod.rs  model_path.rs
src/infrastructure/audio/: capture.rs  mod.rs
src/infrastructure/stt/: mod.rs  whisper.rs
src/infrastructure/translation/: madlad.rs  mod.rs
src/infrastructure/vad/: mod.rs  silero.rs
src/js/: confidence.ts  confidenceFilter.test.ts  confidenceFilter.ts  constants.ts  lang.ts  revenuecat.ts  soniox.ts  tabIcons.ts  tts.ts
src/js/tts/: BaseAudioTTSProvider.ts  edge.ts  elevenlabs.ts  google.ts  index.ts  types.ts  webspeech.ts
src/stores/: confidenceStore.ts  displayStore.ts  index.ts  subscriptionStore.ts  translationStore.ts  ttsStore.ts
tests/integration/: mod.rs  pipeline_test.rs
tests/unit/infrastructure/: audio_test.rs  stt_test.rs  translation_test.rs  vad_test.rs
