[package]
name = "auralis"
version = "0.1.0"
edition = "2021"
authors = ["Sentia Lab"]

[dependencies]
# Workspace dependencies - defined locally for now
# In future tasks, these will be managed via workspace
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"