[workspace]
members = ["."]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
futures = "0.3"

# Audio
cpal = "0.15"

# STT (whisper.cpp)
whisper-rs = "0.11"

# Python Integration
pyo3 = { version = "0.22", features = ["auto-initialize"] }
pyo3-asyncio = { version = "0.22", features = ["tokio-runtime"] }

# Desktop framework (added later in src-tauri)
tauri = { version = "2.1", features = ["macos-private-api"] }

[package]
name = "auralis"
version = "0.1.0"
edition = "2021"
authors = ["Sentia Lab"]

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }

# Add new workspace dependencies for testing
cpal = { workspace = true }
whisper-rs = { workspace = true }
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "memory"
harness = false