[package]
name = "auralis-app"
version = "0.1.0"
edition = "2021"
authors = ["Sentia Lab"]

[lib]
name = "auralis_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2.5"
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
dirs = "5.0"
once_cell = "1"
auralis = { path = ".." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
