[package]
name = "auralis-app"
version = "0.1.0"
edition = "2021"
authors = ["Sentia Lab"]

[lib]
name = "auralis_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-shell = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2.5"
futures = "0.3"
dirs = "5.0"
once_cell = "1"
auralis = { path = ".." }

# Edge TTS
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

# macOS: ScreenCaptureKit for system audio capture
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
